--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".new_design.activity.StockManageActivity"></activity>
-        <activity android:name=".new_design.ShowCartActivity" />
+        <activity android:name=".new_design.activity.ShowCartActivity" />
         <activity android:name=".new_design.activity.ShowProductActivity" />
         <activity android:name=".new_design.activity.ShowCommunityActivity" />
         <activity android:name=".new_design.activity.NewEditProductActivity" />
